--- a/src/@fuse/components/navigation/vertical/nav-collapse/nav-vertical-collapse.component.html
+++ b/src/@fuse/components/navigation/vertical/nav-collapse/nav-vertical-collapse.component.html
@@ -25,7 +25,10 @@
     </a>
 
     <ng-template #itemContent>
-        <mat-icon class="nav-link-icon" *ngIf="item.icon">{{item.icon}}</mat-icon>
+        <mat-icon class="nav-link-icon" *ngIf="item.icon && item.icon !== 'product_src'">{{item.icon}}</mat-icon>
+        <span class="nav-link-icon" *ngIf="item.icon && item.icon == 'product_src'">
+            <img mat-list-icon src="assets/images/ayo/icon/private_label.png" srcset="assets/images/ayo/icon/private_label@2x.png 2x" style="max-height: 100%;" />
+        </span>
         <span class="nav-link-title" [translate]="item.translate">{{item.title}}</span>
         <span class="nav-link-badge" *ngIf="item.badge" [translate]="item.badge.translate"
               [ngStyle]="{'background-color': item.badge.bg,'color': item.badge.fg}">
