--- a/src/app/pages/user-management/private-label/supplier-company/index/supplier-company-index.component.html
+++ b/src/app/pages/user-management/private-label/supplier-company/index/supplier-company-index.component.html
@@ -1,7 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <page-content-header [contentTitle]="'Supplier Company'">
-    <button style="width: 170px" [routerLink]="['/user-management', 'supplier-company','create']" mat-raised-button
-      type="button">
+    <button style="width: 170px" [routerLink]="['/user-management', 'supplier-company','create']" mat-raised-button type="button">
       <mat-icon>add</mat-icon> TAMBAH
     </button>
   </page-content-header>
@@ -34,21 +33,31 @@
         </ngx-datatable-column>
         <ngx-datatable-column name="No Telepon" prop="phone">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <span class="row-address">{{row.phone}}</span>
+            <span class="row-address">{{row.telephone}}</span>
           </ng-template>
         </ngx-datatable-column>
         <ngx-datatable-column name="Status" prop="status">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <span class="row-address">{{row.status}}</span>
+            <span [class]="row.status == 'active'? 'dropdown-active' : 'dropdown-inactive'" *ngIf="!permission?.ubah">{{row.status}}
+            </span>
+            <!-- <span> -->
+              <mat-form-field class="orders dropdown" [class]="row.status == 'active'? 'orders status-active' : row.status == 'inactive'? 'orders status-nonactive': 'orders status-active'" fxLayout="row" fxLayoutAlign="center center" *ngIf="permission?.ubah">
+                <mat-select [(ngModel)]="row.status" (selectionChange)="selectionStatus($event, row, $index)">
+                  <mat-option [value]="item.status" *ngFor="let item of supplierStatusList">{{item.name}}</mat-option>
+                  <!-- <mat-option [value]="active" selected>Aktif</mat-option>
+                  <mat-option [value]="inactive">Non-Aktif</mat-option> -->
+                </mat-select>
+              </mat-form-field>
+            <!-- </span> -->
           </ng-template>
         </ngx-datatable-column>
         <ngx-datatable-column [width]="80" name="Tindakan" headerClass="textright" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="button-row" style="margin-left: -10px">
-              <button mat-icon-button color="" (click)="directEdit(row)" [disabled]="!permission?.ubah">
+              <button mat-icon-button color="primary" matTooltip="Edit" (click)="directEdit(row)" [disabled]="!permission?.ubah">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
-              <button mat-icon-button color="primary" matTooltip="Hapus" (click)="deleteSupplierCompanyById(row.id)"
+              <button mat-icon-button color="primary" matTooltip="Hapus" (click)="deleteById(row.id)"
                 [ngStyle]="{'cursor': !permission?.hapus ? 'no-drop' : ''}" [disabled]="!permission?.hapus">
                 <mat-icon>delete</mat-icon>
               </button>
