--- a/src/scss/globals/global.scss
+++ b/src/scss/globals/global.scss
@@ -501,6 +501,53 @@ mat-form-field.orders {
       display: block;
     }
   }
+
+  &.status-active {
+    .mat-form-field-infix {
+      border: 1px solid;
+      border-radius: 5px;
+      padding: 3px 10px;
+      min-width: 100px;
+      width: 100px !important;
+      border-color: green;
+    }
+
+    .mat-form-field-wrapper {
+      padding-bottom: 0;
+    }
+
+    .mat-form-field-underline {
+      display: none;
+    }
+
+    .mat-select-value-text {
+      font-size: 0.8em;
+      color: green;
+    }
+  }
+  &.status-nonactive {
+    .mat-form-field-infix {
+      border: 1px solid;
+      border-radius: 5px;
+      padding: 3px 10px;
+      min-width: 100px;
+      width: 100px !important;
+      border-color:red;
+    }
+
+    .mat-form-field-wrapper {
+      padding-bottom: 0;
+    }
+
+    .mat-form-field-underline {
+      display: none;
+    }
+
+    .mat-select-value-text {
+      font-size: 0.8em;
+      color: red;
+    }
+  }
 }
 
 mat-form-field.quantity {
