--- a/src/scss/globals/global.scss
+++ b/src/scss/globals/global.scss
@@ -477,6 +477,10 @@ mat-form-field.orders {
       padding: 0;
       border-top: 0;
     }
+    
+    .mat-form-field-wrapper {
+      padding-bottom: 0;
+    }
 
     .mat-input-placeholder {
       padding-top: 20px;
