--- a/src/app/pages/user-management/private-label/panel-mitra/create/panel-mitra-create.component.html
+++ b/src/app/pages/user-management/private-label/panel-mitra/create/panel-mitra-create.component.html
@@ -59,40 +59,54 @@
           <button mat-flat-button style="width: 160px" color="white" (click)="updateFilter()"><mat-icon>vertical_align_top</mat-icon> Export XLSX</button>
         </div>
       </div>
+
+      <form [formGroup]="formFilter" autoComplete="off">
       <div class="pl-16 pr-16 mt-8 bb" fxLayout="row wrap" fxLayoutAlign="space-between center" fxLayoutGap="20px">
         <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-          <mat-select placeholder="National" >
-            <mat-option [value]="item.id" *ngFor="let item of filterCategory">{{item.name}}</mat-option>
+          <mat-select placeholder="National" formControlName="national">
+            <mat-option [value]="item.id" *ngFor="let item of listLevelArea">{{item.name}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-          <mat-select placeholder="Zone" >
-            <mat-option [value]="item.id" *ngFor="let item of filterCategory">{{item.name}}</mat-option>
+          <mat-select placeholder="Zone" formControlName="zone" multiple>
+            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['zone'])">{{item.name === 'all' ? 'Semua
+              Zona' :
+              item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-          <mat-select placeholder="Regional" >
-            <mat-option [value]="item.id" *ngFor="let item of filterCategory">{{item.name}}</mat-option>
+          <mat-select placeholder="Regional" formControlName="region" multiple>
+            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['region'])">{{item.name === 'all' ? 'Semua
+              Regional' :
+              item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-          <mat-select placeholder="Area" >
-            <mat-option [value]="item.id" *ngFor="let item of filterCategory">{{item.name}}</mat-option>
+          <mat-select placeholder="Area" formControlName="area" multiple>
+            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['area'])">{{item.name === 'all' ? 'Semua
+              Area' :
+              item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-          <mat-select placeholder="Salespoint" >
-            <mat-option [value]="item.id" *ngFor="let item of filterCategory">{{item.name}}</mat-option>
+          <mat-select placeholder="Salespoint" formControlName="salespoint" multiple>
+            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['salespoint'])">{{item.name === 'all' ? 'Semua
+              Salespoint' :
+              item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-          <mat-select placeholder="District" >
-            <mat-option [value]="item.id" *ngFor="let item of filterCategory">{{item.name}}</mat-option>
+          <mat-select placeholder="District" formControlName="district" multiple>
+            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['district'])">{{item.name === 'all' ? 'Semua
+              District' :
+              item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-          <mat-select placeholder="Territory" >
-            <mat-option [value]="item.id" *ngFor="let item of filterCategory">{{item.name}}</mat-option>
+          <mat-select placeholder="Territory" formControlName="territory" multiple>
+            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['territory'])">{{item.name === 'all' ? 'Semua
+              Territory' :
+              item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
 
@@ -103,6 +117,8 @@
           </mat-form-field>
         </div>
       </div>
+      </form>
+      
       <ngx-datatable class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
         [offset]="offsetPagination" [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true"
         [reorderable]="reorderable" [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true"
