fixing start & end pin up not showing on edit

--- a/src/app/pages/sku-management/product/edit/product-edit.component.html
+++ b/src/app/pages/sku-management/product/edit/product-edit.component.html
@@ -125,7 +125,7 @@
                       </mat-radio-group>
                     </div>
                     <div class="pt-16" fxLayout="column" style="margin-left: 50px;"
-                      *ngIf="formProductGroup.get('status_pin_up').value === '1'">
+                      *ngIf="formProductGroup.get('status_pin_up').value == 1">
                       <strong>Durasi Pin Up</strong>
                       <div fxLayout="row">
                         <mat-form-field fxFlex="50" class="is-light">
