--- a/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
+++ b/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
@@ -265,8 +265,11 @@
             </div>
           </div>
           <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
-            <mat-form-field fxFlex="50" class="is-light form-primary">
-              <input matInput placeholder="Apps Version" formControlName="version">
+            <mat-form-field fxFlex="40" class="is-light form-primary">
+              <input matInput placeholder="Apps Version AYO SRC Toko" formControlName="version_retailer">
+            </mat-form-field>
+            <mat-form-field fxFlex="40" class="is-light form-primary" style="margin-left: 30px;">
+              <input matInput placeholder="Apps Version AYO SRC Kasir" formControlName="version_cashier">
             </mat-form-field>
           </div>
 
