--- a/src/app/pages/user-management/customer/index/customer-index.component.html
+++ b/src/app/pages/user-management/customer/index/customer-index.component.html
@@ -47,11 +47,11 @@
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.city?.name}}</ng-template>
         </ngx-datatable-column>
 
-        <!-- <ngx-datatable-column name="Application Version" prop="version" summary-template="activeCell"
+        <ngx-datatable-column name="Application Version" prop="version" summary-template="activeCell"
           [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.version || '-'}}
           </ng-template>
-        </ngx-datatable-column> -->
+        </ngx-datatable-column>
 
         <ngx-datatable-column [width]="100" name="Status" prop="status_indo">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
