--- a/src/app/pages/user-management/field-force/index/field-force-index.component.html
+++ b/src/app/pages/user-management/field-force/index/field-force-index.component.html
@@ -107,11 +107,10 @@
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.area_code}}</ng-template>
         </ngx-datatable-column>
 
-        <!-- <ngx-datatable-column name="Application Version" prop="version" summary-template="activeCell"
-          [sortable]="false">
+        <ngx-datatable-column name="Apps Version" prop="version" summary-template="activeCell" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.version || '-'}}
           </ng-template>
-        </ngx-datatable-column> -->
+        </ngx-datatable-column>
 
         <ngx-datatable-column [width]="100" name="Status" prop="status">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
