--- a/src/app/pages/delivery-management/mitra-delivery-panel/edit/mitra-delivery-panel-edit.component.html
+++ b/src/app/pages/delivery-management/mitra-delivery-panel/edit/mitra-delivery-panel-edit.component.html
@@ -125,17 +125,24 @@
             (select)='onSelect($event)'>
 
             <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="false">
-              <!-- <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
-                  let-selectFn="selectFn">
-                  <mat-checkbox [checked]="allRowsSelected" (change)="selectFn(!allRowsSelected)"></mat-checkbox>
-                </ng-template> -->
+              <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
+                let-selectFn="selectFn">
+                <mat-checkbox [checked]="allRowsSelected" (change)="mySelectFn(selectFn, allRowsSelected)">
+                </mat-checkbox>
+              </ng-template>
 
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value" let-isSelected="isSelected"
+                let-onCheckboxChangeFn="onCheckboxChangeFn">
+                <mat-checkbox [checked]="bindSelector(isSelected, row)" (change)="onCheckboxChangeFn($event)">
+                </mat-checkbox>
+              </ng-template>
+
+              <!-- <ng-template ngx-datatable-cell-template let-row="row" let-value="value" let-isSelected="isSelected"
                 let-onCheckboxChangeFn="onCheckboxChangeFn">
                 <mat-checkbox [checked]="bindSelector(isSelected, row)" (change)="onSelectAudience($event, row)"
                   [disabled]="isDetail">
                 </mat-checkbox>
-              </ng-template>
+              </ng-template> -->
             </ngx-datatable-column>
 
             <ngx-datatable-column name="Nama" prop="name"></ngx-datatable-column>
