--- a/src/app/pages/delivery-management/courier-management/create/courier-create-managament.component.html
+++ b/src/app/pages/delivery-management/courier-management/create/courier-create-managament.component.html
@@ -21,6 +21,10 @@
               *ngIf="formCourier.controls['contact'].hasError('required') && formCourier.controls['contact'].touched">
               Nomor Kontak harus diisi
             </mat-error>
+            <mat-error
+              *ngIf="formCourier.controls['contact'].hasError('pattern') && formCourier.controls['contact'].touched">
+              Nomor Kontak Tidak Valid, Nomor Kontak harus berupa angka
+            </mat-error>
           </mat-form-field>
           <mat-form-field fxFlex="100" class="is-light form-primary">
             <input matInput type="text" formControlName="email" placeholder="Email">
